# demo-mik32-cmake

./: .gitmodules  README.md
mik32-amur/03-blink/: CMakeLists.txt  ReadMe.md  main.c  mik32.svd
mik32-amur/03-blink/cmake/: gcc-riscv-none-elf.cmake
mik32-amur/03-blink/hal/: CMakeLists.txt
mik32-amur/03-blink/hal/peripherals/Include/: mik32_hal_dac.h  mik32_hal_irq.h  mik32_hal_spi.h  mik32_hal_wdt.h
mik32-amur/03-blink/hal/peripherals/Source/: mik32_hal_dma.c  mik32_hal_irq.c  mik32_hal_pcc.c  mik32_hal_spi.c  mik32_hal_spifi.c  mik32_hal_timer16.c
mik32-amur/03-blink/shared/: README.md
mik32-amur/03-blink/shared/include/: mik32_memory_map.h
mik32-amur/03-blink/shared/libs/: uart_lib.h  xprintf.h
mik32-amur/03-blink/shared/periphery/: analog_reg.h  boot.h  crypto.h  gpio.h  otp.h  pad_config.h  power_manager.h  pvd_control.h  rtc.h  scr1_timer.h  spifi.h  timer16.h
mik32-amur/mik32-hal-adc/: CMakeLists.txt  main.c
mik32-amur/mik32-hal-adc-irq/: main.c
mik32-amur/mik32-hal-adc-irq-rtt/: main.c
mik32-amur/mik32-hal-adc-irq-rtt/mik32v2-sdk/: CMakeLists.txt
mik32-amur/mik32-hal-adc-rtt/: .clang-format  CMakeLists.txt  main.c
mik32-amur/mik32-hal-adc-rtt/doc/: mik32_bluepill.json
mik32-amur/mik32-hal-blink/: main.c
mik32-amur/mik32-hal-blink-irq/: CMakeLists.txt  main.c
mik32-amur/mik32-hal-crc32/: main.c
mik32-amur/mik32-hal-crypto/: main.c
mik32-amur/mik32-hal-crypto/mik32v2-sdk/: CMakeLists.txt
mik32-amur/mik32-hal-dac/: main.c
mik32-amur/mik32-hal-dma-crypto/: main.c
mik32-amur/mik32-hal-dma-i2c-master/: main.c
mik32-amur/mik32-hal-dma-i2c-slave/: main.c
mik32-amur/mik32-hal-dma-m2m/: main.c
mik32-amur/mik32-hal-dma-m2m-irq/: main.c
mik32-amur/mik32-hal-dma-spi-master/: main.c
mik32-amur/mik32-hal-dma-spi-slave/: main.c
mik32-amur/mik32-hal-dma-timer32/: main.c
mik32-amur/mik32-hal-eeprom/: main.c
mik32-amur/mik32-hal-eeprom2spifi/: main.c
mik32-amur/mik32-hal-i2c-master/: main.c
mik32-amur/mik32-hal-i2c-master-irq/: main.c
mik32-amur/mik32-hal-i2c-slave/: main.c
mik32-amur/mik32-hal-i2c-slave-irq/: main.c
mik32-amur/mik32-hal-irq/: ReadMe.md  main.c
mik32-amur/mik32-hal-irq/stubs/: CMakeLists.txt
mik32-amur/mik32-hal-otp/: main.c
mik32-amur/mik32-hal-rtc-irq/: main.c
mik32-amur/mik32-hal-rtc-rtt/: CMakeLists.txt  main.c
mik32-amur/mik32-hal-scr1-timer/: main.c
mik32-amur/mik32-hal-scr1-timer-irq/: main.c  mik32.svd
mik32-amur/mik32-hal-spi-master/: main.c
mik32-amur/mik32-hal-spi-master-irq/: main.c
mik32-amur/mik32-hal-spi-slave/: main.c
mik32-amur/mik32-hal-spi-slave-irq/: main.c
mik32-amur/mik32-hal-spifi-quadspi/: main.c
mik32-amur/mik32-hal-spifi-quadspi-dma/: main.c
mik32-amur/mik32-hal-spifi-singlespi/: main.c
mik32-amur/mik32-hal-system-time/: main.c
mik32-amur/mik32-hal-timer16/: main.c
mik32-amur/mik32-hal-timer16-irq/: main.c
mik32-amur/mik32-hal-timer32/: main.c
mik32-amur/mik32-hal-timer32-irq/: main.c
mik32-amur/mik32-hal-timer32-pwm/: main.c
mik32-amur/mik32-hal-tsens/: main.c
mik32-amur/mik32-hal-tsens-irq/: main.c
mik32-amur/mik32-hal-tsens-rtt/: main.c
mik32-amur/mik32-hal-usart/: main.c
mik32-amur/mik32-hal-usart-dma/: main.c
mik32-amur/mik32-hal-usart-irq/: main.c
mik32-amur/mik32-hal-usart-modem/: main.c
mik32-amur/mik32-hal-wdt/: main.c
mik32-amur/mik32-hal-wdt-irq/: main.c
mik32-amur/mik32-spifi/: main.c
mik32-amur/mik32-spifi-quad/: main.c
mik32-amur/mik32-ssd1306/: main.c
mik32-amur/rtt-default/: CMakeLists.txt  main.c
(+30 files in other folders)
